--- a/home.html
+++ b/home.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="./home.css"/>
 </head>
 <body>
-        <h3>seja bem vindo</h3>
+    <header>
+        <h1>Projeto</h1>
+    
+        <div class="conteiner">
+            <nav>
+                <ul>
+                    <li>
+                        <a href="" >Sobre</a>
+                    </li>
+                    <li>
+                        <a href="" >Tecnologia</a>
+                    </li>
+                    <li>
+                        <a href="" >Contato</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 </body>
 </html>
