--- a/login.html
+++ b/login.html
@@ -12,11 +12,12 @@
     <form>
         <h3>Login</h3>
         <input type="text" placeholder="Nome" id="login">
+        login: admin 
         <input type="password" placeholder="Senha" id="senha">
+        senha: admin
         <input type="submit" onclick="logar(); return false;">
     </form>
 
     <script src="./script.js"></script>
-
 </body>
 </html>
