--- a/home.html
+++ b/home.html
@@ -1,30 +1,58 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="./home.css"/>
+    <link rel="stylesheet" href="./home.css" />
 </head>
+
 <body>
     <header>
         <h1>Projeto</h1>
-    
+
         <div class="conteiner">
             <nav>
                 <ul>
                     <li>
-                        <a href="" >Sobre</a>
+                        <a href="#about">Sobre</a>
                     </li>
                     <li>
-                        <a href="" >Tecnologia</a>
+                        <a href="">Tecnologia</a>
                     </li>
                     <li>
-                        <a href="" >Contato</a>
+                        <a href="">Contato</a>
                     </li>
                 </ul>
             </nav>
         </div>
     </header>
+    <section id="about">
+        <div class="conteiner">
+            <articles>
+                <article>
+                <p> .</p>
+                <p> .</p>
+                <p> .</p>
+                <p> .</p>
+                <p> .</p>
+                <p> .</p>
+                <p> .</p>
+                <p> .</p>
+                <p> .</p>
+                <p> .</p>
+                <p> .</p>
+                <p> .</p>
+                <p> .</p>
+                <p> .</p>
+                </article>
+            </articles>
+        </div>
+    </section>
+    <footer>
+        &copy; Todos os direitos reservados - 2024
+    </footer>
 </body>
+
 </html>
