--- a/home.html
+++ b/home.html
@@ -19,10 +19,10 @@
                         <a href="#about">Sobre</a>
                     </li>
                     <li>
-                        <a href="">Tecnologia</a>
+                        <a href="#tec">Tecnologia</a>
                     </li>
                     <li>
-                        <a href="">Contato</a>
+                        <a href="#contact">Contato</a>
                     </li>
                 </ul>
             </nav>
@@ -32,22 +32,69 @@
         <div class="conteiner">
             <articles>
                 <article>
-                <p> .</p>
-                <p> .</p>
-                <p> .</p>
-                <p> .</p>
-                <p> .</p>
-                <p> .</p>
-                <p> .</p>
-                <p> .</p>
-                <p> .</p>
-                <p> .</p>
-                <p> .</p>
-                <p> .</p>
-                <p> .</p>
-                <p> .</p>
+                    <h1>Sobre o projeto</h1>
+                    <p> .</p>
+                    <p> .</p>
+                    <p> .</p>
+                </article>
+                <article>
+                    <h1>Sobre mim</h1>
+                    <p> .</p>
+                    <p> .</p>
+                    <p> .</p>
                 </article>
             </articles>
+        </div>
+    </section>
+    <section id="tec">
+        <div class="conteiner">
+            <articles>
+                <article>
+                    <h1>HTML</h1>
+                    <img src="./imagens/HTML.png" alt="logo html" />
+                    <p> .</p>
+                    <p> .</p>
+                    <p> .</p>
+                </article>
+                <article>
+                    <h2>Css</h2>
+                    <img src="./imagens/CSS.png" alt=" logo css" />
+                    <p> .</p>
+                    <p> .</p>
+                    <p> .</p>
+                </article>
+                <article>
+                    <h3>JavaScript</h3>
+                    <img src="./imagens/JS.png" alt=" logo JavaScript" />
+                    <p> .</p>
+                    <p> .</p>
+                    <p> .</p>
+                </article>
+        </div>
+    </section>
+    <section id="contact">
+        <div class="conteiner">
+            <form>
+                <h3>Fale conosco</h3>
+                <input type="text" placeholder="Nome" id="nome">
+                <input type="email" placeholder="Email" id="email">
+                <!--<textarea id="text" name="text" placeholder="Mande seu feedback">-->
+                <input type="submit">
+            </form>
+
+            <div>
+                <h3>Acompanhe o projeto </h3>
+
+                <ul class="social-links">
+                    <li> GitHub <a href="https://github.com/rithielly-becker" title="Siga-nos no github"> <!--<img
+                                src="./imagens/GitHub-Logo.png" alt="Logo do github" --> </a> </li>
+                    <li>LinkedIn <a href="" title="Siga-nos no LinkedIn"> <!--<img src="./imagens/linkedin.jpg"
+                                alt="Logo do linkedIn" --> </a> </li>
+                    <li>Instagran <a href="" title="Siga-nos no Instagram"> <!--<img src="./imagens/instagram.png"
+                                alt="Logo do Instagram" </a> --></li>
+                </ul>
+
+            </div>
         </div>
     </section>
     <footer>
