--- a/home.html
+++ b/home.html
@@ -33,7 +33,12 @@
             <articles>
                 <article>
                     <h1>Sobre o projeto</h1>
-                    <p> .</p>
+                    <p>    Durante esses 30 dias o objetivo desse projeto se resume na criação de um “site” usando o básico
+                        de html, css e javascript. O projeto e uma forma que achei de pôr em pratica o que venho
+                        aprendendo nessa jornada de me tornar programadora backend. <br>
+                        <br> O projeto continuará a ser melhorado constantemente conforme for me desenvolvendo nessa jornada
+                        de aprendizado
+                    </p>
                     <p> .</p>
                     <p> .</p>
                 </article>
@@ -78,7 +83,7 @@
                 <h3>Fale conosco</h3>
                 <input type="text" placeholder="Nome" id="nome">
                 <input type="email" placeholder="Email" id="email">
-                <!--<textarea id="text" name="text" placeholder="Mande seu feedback">-->
+                <textarea id="text" name="text" placeholder="Mande seu feedback"></textarea>
                 <input type="submit">
             </form>
 
@@ -86,12 +91,12 @@
                 <h3>Acompanhe o projeto </h3>
 
                 <ul class="social-links">
-                    <li> GitHub <a href="https://github.com/rithielly-becker" title="Siga-nos no github"> <!--<img
-                                src="./imagens/GitHub-Logo.png" alt="Logo do github" --> </a> </li>
-                    <li>LinkedIn <a href="" title="Siga-nos no LinkedIn"> <!--<img src="./imagens/linkedin.jpg"
-                                alt="Logo do linkedIn" --> </a> </li>
-                    <li>Instagran <a href="" title="Siga-nos no Instagram"> <!--<img src="./imagens/instagram.png"
-                                alt="Logo do Instagram" </a> --></li>
+                    <li><a href="https://github.com/rithielly-becker" title="Siga-nos no github"><img
+                                src="./imagens/GitHub-Logo.png" alt="Logo do github"></a> </li>
+                    <li><a href="" title="Siga-nos no LinkedIn"> <img src="./imagens/logotipo-quadrado-do-linkedin.avif"
+                                alt="Logo do linkedIn" ></a> </li>
+                    <li><a href="" title="Siga-nos no Instagram"><img src="./imagens/instagram.png"
+                                alt="Logo do Instagram"></a></li>
                 </ul>
 
             </div>
