--- a/home.html
+++ b/home.html
@@ -33,10 +33,11 @@
             <articles>
                 <article>
                     <h1>Sobre o projeto</h1>
-                    <p>    Durante esses 30 dias o objetivo desse projeto se resume na criação de um “site” usando o básico
+                    <p> Durante esses 30 dias o objetivo desse projeto se resume na criação de um “site” usando o básico
                         de html, css e javascript. O projeto e uma forma que achei de pôr em pratica o que venho
                         aprendendo nessa jornada de me tornar programadora backend. <br>
-                        <br> O projeto continuará a ser melhorado constantemente conforme for me desenvolvendo nessa jornada
+                        <br> O projeto continuará a ser melhorado constantemente conforme for me desenvolvendo nessa
+                        jornada
                         de aprendizado
                     </p>
                     <p> .</p>
@@ -55,7 +56,7 @@
         <div class="conteiner">
             <articles>
                 <article>
-                    <h1>HTML</h1>
+                    <h3>HTML</h3>
                     <img src="./imagens/HTML.png" alt="logo html" />
                     <p> .</p>
                     <p> .</p>
@@ -75,6 +76,7 @@
                     <p> .</p>
                     <p> .</p>
                 </article>
+            </articles>
         </div>
     </section>
     <section id="contact">
@@ -94,7 +96,7 @@
                     <li><a href="https://github.com/rithielly-becker" title="Siga-nos no github"><img
                                 src="./imagens/GitHub-Logo.png" alt="Logo do github"></a> </li>
                     <li><a href="" title="Siga-nos no LinkedIn"> <img src="./imagens/logotipo-quadrado-do-linkedin.avif"
-                                alt="Logo do linkedIn" ></a> </li>
+                                alt="Logo do linkedIn"></a> </li>
                     <li><a href="" title="Siga-nos no Instagram"><img src="./imagens/instagram.png"
                                 alt="Logo do Instagram"></a></li>
                 </ul>
