--- a/home.html
+++ b/home.html
@@ -38,9 +38,17 @@
                         aprendendo nessa jornada de me tornar programadora backend. <br>
                         <br> O projeto continuará a ser melhorado constantemente conforme for me desenvolvendo nessa
                         jornada
-                        de aprendizado
+                        de aprendizado. Como parte desse projeto serão postados alguns projetos menores
                     </p>
-                    <p> .</p>
+                    <p> Alguns dos projetos que virão ao longo desse ano:<br>
+                        <ul id="exemplos">
+                            <li>Calculadora</li>
+                            <li>Calendario</li>
+                            <li>Jogo da velha</li>
+                            <li>Gerador de QR code</li>
+                            <li>Lista de tarefas</li>
+                        </ul>
+                    </p>
                     <p> .</p>
                 </article>
                 <article>
@@ -56,7 +64,7 @@
         <div class="conteiner">
             <articles>
                 <article>
-                    <h3>HTML</h3>
+                    <h2>HTML</h2>
                     <img src="./imagens/HTML.png" alt="logo html" />
                     <p> .</p>
                     <p> .</p>
@@ -70,13 +78,28 @@
                     <p> .</p>
                 </article>
                 <article>
-                    <h3>JavaScript</h3>
+                    <h2>JavaScript</h2>
                     <img src="./imagens/JS.png" alt=" logo JavaScript" />
                     <p> .</p>
                     <p> .</p>
                     <p> .</p>
                 </article>
             </articles>
+            <section id="projects">
+                <div class="container">
+                    <articles>
+                        <article>
+                            <h3>Outros projetos</h3>
+                            <ul id="program">
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                            </ul>
+                        </article>
+                    </articles>
+                </div>
+            </section>
         </div>
     </section>
     <section id="contact">
