--- a/home.html
+++ b/home.html
@@ -24,6 +24,9 @@
                     <li>
                         <a href="#contact">Contato</a>
                     </li>
+                    <li>
+                        <a href="#projects">Projetos</a>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -41,13 +44,13 @@
                         de aprendizado. Como parte desse projeto serão postados alguns projetos menores
                     </p>
                     <p> Alguns dos projetos que virão ao longo desse ano:<br>
-                        <ul id="exemplos">
-                            <li>Calculadora</li>
-                            <li>Calendario</li>
-                            <li>Jogo da velha</li>
-                            <li>Gerador de QR code</li>
-                            <li>Lista de tarefas</li>
-                        </ul>
+                    <ul id="exemplos">
+                        <li>Calculadora</li>
+                        <li>Calendario</li>
+                        <li>Jogo da velha</li>
+                        <li>Gerador de QR code</li>
+                        <li>Lista de tarefas</li>
+                    </ul>
                     </p>
                     <p> .</p>
                 </article>
@@ -80,13 +83,17 @@
                 <article>
                     <h2>JavaScript</h2>
                     <img src="./imagens/JS.png" alt=" logo JavaScript" />
-                    <p> .</p>
-                    <p> .</p>
-                    <p> .</p>
+                    <p id="js">
+                        Ate o momento foi usada apenas uma função "basica" do JS:
+                    </p>
+                    <p>document.getElementById - Que e responsavel por obter um elemento HTML específico
+                        com base no valor de seu atributo id. Quando você chama document.getElementById("myElement"), o
+                        JavaScript procura um elemento com o atributo id igual a "myElement" no documento HTML atual.
+                    </p>
                 </article>
             </articles>
             <section id="projects">
-                <div class="container">
+                <div class="projeto">
                     <articles>
                         <article>
                             <h3>Outros projetos</h3>
@@ -103,7 +110,7 @@
         </div>
     </section>
     <section id="contact">
-        <div class="conteiner">
+        <div class="talk">
             <form>
                 <h3>Fale conosco</h3>
                 <input type="text" placeholder="Nome" id="nome">
@@ -118,10 +125,10 @@
                 <ul class="social-links">
                     <li><a href="https://github.com/rithielly-becker" title="Siga-nos no github"><img
                                 src="./imagens/GitHub-Logo.png" alt="Logo do github"></a> </li>
-                    <li><a href="" title="Siga-nos no LinkedIn"> <img src="./imagens/logotipo-quadrado-do-linkedin.avif"
-                                alt="Logo do linkedIn"></a> </li>
-                    <li><a href="" title="Siga-nos no Instagram"><img src="./imagens/instagram.png"
-                                alt="Logo do Instagram"></a></li>
+                    <li><a href="https://www.linkedin.com/in/rithielly-becker-a3a35a2a2/" title="Siga-nos no LinkedIn">
+                            <img src="./imagens/logotipo-quadrado-do-linkedin.avif" alt="Logo do linkedIn"></a> </li>
+                    <li><a href="https://www.instagram.com/codelab03/" title="Siga-nos no Instagram"><img
+                                src="./imagens/instagram.png" alt="Logo do Instagram"></a></li>
                 </ul>
 
             </div>
