--- a/home.html
+++ b/home.html
@@ -31,6 +31,7 @@
             </nav>
         </div>
     </header>
+
     <section id="about">
         <div class="conteiner">
             <articles>
@@ -67,7 +68,7 @@
         <div class="conteiner">
             <articles>
                 <article>
-                    <h2>HTML</h2>
+                    <h2>Html</h2>
                     <img src="./imagens/HTML.png" alt="logo html" />
                     <p> .</p>
                     <p> .</p>
@@ -92,25 +93,27 @@
                     </p>
                 </article>
             </articles>
-            <section id="projects">
-                <div class="projeto">
-                    <articles>
-                        <article>
-                            <h3>Outros projetos</h3>
-                            <ul id="program">
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                            </ul>
-                        </article>
-                    </articles>
-                </div>
-            </section>
+    </section>
+    <section id="projects">
+        <div class="projeto">
+            <articles>
+                <article>
+                    <h3>Outros projetos</h3>
+                    <ul id="program">
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </article>
+            </articles>
         </div>
+    </section>
+    </div>
     </section>
     <section id="contact">
         <div class="talk">
+
             <form>
                 <h3>Fale conosco</h3>
                 <input type="text" placeholder="Nome" id="nome">
@@ -120,6 +123,7 @@
             </form>
 
             <div>
+
                 <h3>Acompanhe o projeto </h3>
 
                 <ul class="social-links">
