--- a/home.html
+++ b/home.html
@@ -22,10 +22,10 @@
                         <a href="#tec">Tecnologia</a>
                     </li>
                     <li>
-                        <a href="#contact">Contato</a>
+                        <a href="#projects">Projetos</a>
                     </li>
                     <li>
-                        <a href="#projects">Projetos</a>
+                        <a href="#contact">Contato</a>
                     </li>
                 </ul>
             </nav>
@@ -100,7 +100,7 @@
                 <article>
                     <h3>Outros projetos</h3>
                     <ul id="program">
-                        <li></li>
+                        <li> <a href="calculadora.html"> Projeto calculadora</a></li>
                         <li></li>
                         <li></li>
                         <li></li>
