--- a/home.html
+++ b/home.html
@@ -101,7 +101,7 @@
                     <h3>Outros projetos</h3>
                     <ul id="program">
                         <li> <a href="calculadora.html"> Projeto calculadora</a></li>
-                        <li></li>
+                        <li> <a href="lista.html"> lista de tarefas</a></li>
                         <li></li>
                         <li></li>
                     </ul>
