--- a/home.html
+++ b/home.html
@@ -95,6 +95,7 @@
             <articles>
                 <article>
                     <h3>Outros projetos</h3>
+                    <p>Projetos feitos acompanhando video aulas e tutorias, com algumas modificações autorais</p>
                     <ul id="program">
                         <li> <a href="calculadora.html"> Projeto calculadora</a></li>
                         <li> <a href="lista.html"> lista de tarefas</a></li>
