--- a/lista.html
+++ b/lista.html
@@ -19,7 +19,9 @@
             </button>
         </div>
         <div class="content--body">
-            <ul id="to-do-list"></ul>
+            <ul id="to-do-list">
+                <li>teste <button>ok</button></li>
+            </ul>
         </div>
     </div>
 
