--- a/lista.html
+++ b/lista.html
@@ -14,17 +14,14 @@
     <div id="content">
         <div id="content--add-itm">
             <input type="text" id="input-new-task" placeholder="Digite sua nova tarefa">
-            <button id="btn-new-task">
-                +
-            </button>
+            <button onclick="newTask()" id="btn-new-task"> + </button>
         </div>
         <div class="content--body">
-            <ul id="to-do-list">
-                <li>teste <button>ok</button></li>
-            </ul>
+            <ol id="to-do-list"></ol>
         </div>
     </div>
 
 </body>
+<script src="./script.js"></script>
 
 </html>
