--- a/calculadora.html
+++ b/calculadora.html
@@ -12,7 +12,7 @@
     <div class="fundo">
         <h1>@codelab03</h1>
         <div class="calculadora">
-            <h1>calculadora</h1>
+            <h1>Calculadora</h1>
             <p id="resultado"></p>
             <table>
                 <tr>
