--- a/home.html
+++ b/home.html
@@ -44,6 +44,9 @@
                         jornada
                         de aprendizado. Como parte desse projeto serão postados alguns projetos menores
                     </p>
+                    <p>
+                         
+                    </p>
                     <p> Alguns dos projetos que virão ao longo desse ano:<br>
                     <ul id="exemplos">
                         <li>Calculadora</li>
@@ -97,8 +100,8 @@
                     <p>Projetos feitos acompanhando video aulas e tutorias, com algumas modificações autorais</p>
                     <ul id="program">
                         <li> <a href="calculadora.html"> Projeto calculadora</a></li>
-                        <li> <a href="lista.html"> lista de tarefas</a></li>
-                        <li></li>
+                        <li> <a href="lista.html"> Lista de tarefas</a></li>
+                        <li> <a href="QRCode.html"> Gerador de QR CODE</a></li>
                         <li></li>
                     </ul>
                 </article>
