--- a/home.html
+++ b/home.html
@@ -102,7 +102,7 @@
                         <li> <a href="calculadora.html"> Projeto calculadora</a></li>
                         <li> <a href="lista.html"> Lista de tarefas</a></li>
                         <li> <a href="QRCode.html"> Gerador de QR CODE</a></li>
-                        <li></li>
+                        <li><a href="agenda.html">Agenda telefonica</a></li>
                     </ul>
                 </article>
             </articles>
